--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,97 @@
-<p>This is the about view.</p>
+<!-- About Section -->
+    <section id="about" class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">About Me</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="team-member">
+                        <img src="images/mario-duran2.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Mario A. Duran</h4>
+                        <p class="text-muted">Mario is a seasoned developer with more than ten  years of experience designing, developing and deploying custom web based applications.</p>
+
+                        <p class="text-muted">Very knowledgeable of  HTML5, CSS3, core JavaScript and frameworks and libraries like JQuery, BackboneJS and AngularJS as backend technologies like C#, ASP.NET, ASP classic, PHP, NodeJS, T-SQL and . He also has ample experience with MVC, MVVM and object oriented implementations.
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Work Experience</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="images/about/orinoco.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2013-Present</h4>
+                                    <h4 class="subheading">Orinoco Systems LLC</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Responsible for software development for both internal projects and customers.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="images/about/cark.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Aug 2015 - Jan 2016</h4>
+                                    <h4 class="subheading">CastleArk Management</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Development and support of automation scripts used to generate and deliver financial reports.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="images/about/nt.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Jul 2014 - Jul 2015</h4>
+                                    <h4 class="subheading">Northern Trust</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Support and development of an internal Sharepoint web application used by the Business partners of the Audit practice.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="images/about/deloitte.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>Jun 2013 - Jul 2014</h4>
+                                    <h4 class="subheading">Deloitte</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Responsible for the design and development of an internal web application that allows project leads and managers view and administer resources, time and effort.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>View my
+                                    <br>entire
+                                    <br>resume</h4>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
