--- a/app/views/about.html
+++ b/app/views/about.html
@@ -37,7 +37,7 @@
                                     <h4 class="subheading">Orinoco Systems LLC</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Responsible for software development for both internal projects and customers.</p>
+                                    <p class="text-muted">Senior Consultant. Responsible for software development for both internal projects and customers.</p>
                                 </div>
                             </div>
                         </li>
