--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -13,23 +13,23 @@
                         <div class="row">
                             <div class="col-lg-12 text-center">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Your Name *" name="name" ng-required="true" ng-model="contactInfo.name" data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
+                                    <input type="text" class="form-control" placeholder="Your Name *" name="name" ng-required="true" ng-model="contactInfo.name.value" show-errors ng-disabled="submitting">
+                                    <p class="help-block text-danger" ng-show="contactInfo.name.error">Please enter your name.</p>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Your Email *" name="email" ng-required="true" ng-model="contactInfo.email" data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
+                                    <input type="email" class="form-control" placeholder="Your Email *" name="email" ng-required="true" ng-model="contactInfo.email.value" show-errors ng-disabled="submitting">
+                                    <p class="help-block text-danger" ng-show="contactInfo.email.error">Please enter a valid email address</p>
                                 </div>
 
                                 <div class="form-group">
-                                    <textarea class="form-control" placeholder="Your Message *" name="message" ng-required="true" ng-model="contactInfo.message" data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
+                                    <textarea class="form-control" placeholder="Your Message *" name="message" ng-required="true" ng-model="contactInfo.message.value" show-errors ng-disabled="submitting"></textarea>
+                                    <p class="help-block text-danger" ng-show="contactInfo.message.error">Please write a message.</p>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
                                 <div id="success"></div>
-                                <button type="button" class="btn btn-xl" ng-click="sendMessage()">Send Message</button>
+                                <button type="button" class="btn btn-xl" ng-click="sendMessage()" ng-disabled="submitting">{{ sendText }}</button>
                             </div>
                         </div>
                     </form>
