Added the contact functionality, sent email and response control

--- a/app/views/ideas.html
+++ b/app/views/ideas.html
@@ -14,7 +14,7 @@
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading"> Already Exists</h4>
-                    <p class="text-muted">If data is always represented the same way, why we have to transfer all each time we do a copy or a download, why not only transfer directions, recipes or formulas to help recreate them instead. Patterns, data structures, data generators, formulas, series... <br /><strong>Working on It</strong> </p>
+                    <p class="text-muted">If data is always represented the same way, why we have to transfer all each time we do a copy or a download, why not only transfer directions, recipes or formulas to help recreate them instead. Patterns, data structures, data generators, formulas, series... <br><strong>Working on It</strong> </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,7 +22,7 @@
                         <i class="fa fa-globe fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Is there anybody out there?</h4>
-                    <p class="text-muted">Speak out, say something, talk with someone, just talk. Talk to someone just because you can.<br / ><strong>ITABOT</strong></p>
+                    <p class="text-muted">Speak out, say something, talk with someone, just talk. Talk to someone just because you can.<br><strong>ITABOT</strong></p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
