--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -28,7 +28,12 @@
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
-                                <div id="success"></div>
+                                <div id="success" ng-show="sentSuccess">
+                                    <div class="alert alert-success"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button><strong>Your message has been sent. </strong></div>
+                                </div>
+                                <div id="error" ng-show="sentError">
+                                    <div class="alert alert-danger"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button><strong>Your message could not be sent, please try again later. </strong></div>
+                                </div>
                                 <button type="button" class="btn btn-xl" ng-click="sendMessage()" ng-disabled="submitting">{{ sendText }}</button>
                             </div>
                         </div>
