--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -1,1 +1,141 @@
-<p>This is the portfolio view.</p>
+<!-- Portfolio Grid Section -->
+<section id="portfolio" class="bg-light-gray">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Portfolio</h2>
+                <h3 class="section-subheading text-muted">Here is a list of my latest sample projects</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal" target="_self">
+                    <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                            <i class="fa fa-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="images/portfolio/weatherApp.png" class="img-responsive" alt="">
+                </a>
+                <div class="portfolio-caption">
+                    <h4>Weather App</h4>
+                    <p class="text-muted">Single Page Application <br>Angular JS</p>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal" target="_self">
+                    <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                            <i class="fa fa-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="images/portfolio/Brick_Smasher.jpg" class="img-responsive" alt="" >
+                </a>
+                <div class="portfolio-caption">
+                    <h4>Brick Smasher</h4>
+                    <p class="text-muted">Video Game <br> Unity3D</p>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6 portfolio-item">
+                <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal" target="_self">
+                    <div class="portfolio-hover">
+                        <div class="portfolio-hover-content">
+                            <i class="fa fa-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img src="images/portfolio/Splash-Screen-plus.jpg" class="img-responsive" alt="">
+                </a>
+                <div class="portfolio-caption">
+                    <h4>Crack my Screen</h4>
+                    <p class="text-muted">iOS Mobile App<br>Swift 2.0</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Portfolio Modals -->
+<!-- Use the modals below to showcase details about your portfolio projects! -->
+
+<!-- Portfolio Modal 1 -->
+<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <!-- Project Details Go Here -->
+                        <h2>Weather WebApp</h2>
+                        <p class="item-intro text-muted">AngularJS Single Page Application</p>
+                        <img class="img-responsive img-centered" src="images/portfolio/weatherApp.png" alt="">
+                        <p>Just another weather app. It is a small project I made to learn and play around with AngularJS 1.5. Uses the weather API provided by OpenWeatherMap.org.</p>
+                        <p><h5>Test it here</h5></p>
+                        <div>SOME APP RUNNING HERE</div>
+                      <p>You can view the App source code at <a href="https://bitbucket.org/mario-duran/" target="_blank">BitBucket</a>.</p>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Portfolio Modal 2 -->
+<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <h2>Brick Smasher</h2>
+                        <p class="item-intro text-muted">Unity3D Video Game</p>
+                        <img class="img-responsive img-centered" src="images/portfolio/brick-smasher_prev.jpg" alt="">
+                        <p><a href="https://mario-duran.com/projects/BrickSmasher1.2/">Brick Smasher</a> is an Arkanoid clone game made as part of the Unity3d <a href="https://www.udemy.com/unitycourse/" target="_blank">course</a> I'm taking. Decided to do a few modifications to the original course project and made it playable and likable for my two kids.</p>
+                        <p>You can view the game source code at <a href="https://bitbucket.org/mario-duran/" target="_blank">BitBucket</a>.</p>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Portfolio Modal 3 -->
+<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <!-- Project Details Go Here -->
+                        <h2>Crack my Screen</h2>
+                        <p class="item-intro text-muted">iOS app</p>
+                        <img class="img-responsive img-centered" src="images/portfolio/Promo1x640.png" alt="Crack my Screen">
+                        <p class="text-justify">The Crack my Screen App is a fun way to trick your friends into thinking you cracked your iPhone screen.<br />Simply, open the App and select a background picture or select the default iPhone background and press the screen to 'Crack' the screen.<br />If you have an iPhone 6s / 6s Plus with 3D touch enabled more elaborate and scientific screen cracking will be available.</p>
+                        <p class="text-warning">Sadly this app didn'e made it to the app store because it wasn't compliant with the Apple's xyz policies.</p>
+                        <p>You can view and download the source code at my <a href="https://bitbucket.org/mario-duran/crack-my-screen" target="_blank">BitBucket</a> page.</p>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
