--- a/app/views/about.html
+++ b/app/views/about.html
@@ -8,15 +8,19 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <div class="team-member">
+                  <div class="col-lg-3"></div>
+                    <div class="col-lg-6 team-member">
                         <img src="images/mario-duran2.jpg" class="img-responsive img-circle" alt="">
                         <h4>Mario A. Duran</h4>
-                        <p class="text-muted">Mario is a seasoned developer with more than ten  years of experience designing, developing and deploying custom web based applications.</p>
-
-                        <p class="text-muted">Very knowledgeable of  HTML5, CSS3, core JavaScript and frameworks and libraries like JQuery, BackboneJS and AngularJS as backend technologies like C#, ASP.NET, ASP classic, PHP, NodeJS, T-SQL and . He also has ample experience with MVC, MVVM and object oriented implementations.
+                        <p class="text-muted text-justify">Mario is a seasoned developer with more than ten  years of experience designing,
+                          developing and deploying custom web based applications.</p>
+                        <p class="text-muted text-justify">Very knowledgeable of  HTML5, CSS3, core JavaScript and frameworks and libraries like JQuery,
+                          BackboneJS and AngularJS as backend technologies like C#, ASP.NET, ASP classic, PHP, NodeJS, T-SQL and .
+                          He also has ample experience with MVC, MVVM and object oriented implementations.
                         </p>
 
                     </div>
+                  <div class="col-lg-3"></div>
                 </div>
             </div>
             <div class="row">
@@ -84,10 +88,11 @@
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>View my
-                                    <br>entire
-                                    <br>resume</h4>
+                            <div class="timeline-image" ng-click="goLinkedin()" style="cursor:pointer;">
+                                <h4>
+                                  <br>
+                                
+                                  resume</h4>
                             </div>
                         </li>
                     </ul>
