Added new client, added links to company logos, added github profile, change the text layout in ideas

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -31,22 +31,37 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
+                      <li class="timeline-inverted">
+                          <div class="timeline-image" ng-click="gotoURL('http://orinoco-systems.com')" style="cursor:pointer;">
+                              <img class="img-circle img-responsive" src="images/about/orinoco.png" alt="">
+                          </div>
+                          <div class="timeline-panel">
+                              <div class="timeline-heading">
+                                  <h4>2013-Present</h4>
+                                  <h4 class="subheading">Orinoco Systems LLC</h4>
+                              </div>
+                              <div class="timeline-body">
+                                  <p class="text-muted">Senior Consultant. Responsible for software development for both internal projects and customers.</p>
+                              </div>
+                          </div>
+                      </li>
                         <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="images/about/orinoco.png" alt="">
+                            <div class="timeline-image" ng-click="gotoURL('http://eki-digital.com')" style="cursor:pointer;">
+                                <img class="img-circle img-responsive" src="images/about/eki.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2013-Present</h4>
-                                    <h4 class="subheading">Orinoco Systems LLC</h4>
+                                    <h4>Mar 2016-Present</h4>
+                                    <h4 class="subheading">EKI-Digital</h4>
+                                    <span class="text-muted">(Current Client)</span>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Senior Consultant. Responsible for software development for both internal projects and customers.</p>
+                                    <p class="text-muted">Senior Consultant. Currently supporting the development and implementation of an Enterprise Case Management System for the City of Chicago.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-image">
+                            <div class="timeline-image" ng-click="gotoURL('http://castleark.com')" style="cursor:pointer;">
                                 <img class="img-circle img-responsive" src="images/about/cark.png" alt="">
                             </div>
                             <div class="timeline-panel">
@@ -60,7 +75,7 @@
                             </div>
                         </li>
                         <li>
-                            <div class="timeline-image">
+                            <div class="timeline-image" ng-click="gotoURL('https://www.northerntrust.com')" style="cursor:pointer;">
                                 <img class="img-circle img-responsive" src="images/about/nt.png" alt="">
                             </div>
                             <div class="timeline-panel">
@@ -74,7 +89,7 @@
                             </div>
                         </li>
                         <li class="timeline-inverted">
-                            <div class="timeline-image">
+                            <div class="timeline-image" ng-click="gotoURL('https://deloitte.com')" style="cursor:pointer;">
                                 <img class="img-circle img-responsive" src="images/about/deloitte.png" alt="">
                             </div>
                             <div class="timeline-panel">
@@ -89,10 +104,10 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image" ng-click="goLinkedin()" style="cursor:pointer;">
-                                <h4>
+                                <h1>
                                   <br>
-                                
-                                  resume</h4>
+
+                                  <i class="fa fa-linkedin"></i></h1>
                             </div>
                         </li>
                     </ul>
