--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -4,11 +4,25 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Portfolio</h2>
-                <h3 class="section-subheading text-muted">Here is a list of my latest sample projects</h3>
+                <h3 class="section-subheading text-muted">Here is a list of things I've been doing lately</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 col-sm-6 portfolio-item">
+          <div class="col-md-3 col-sm-6 portfolio-item">
+              <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal" target="_self">
+                  <div class="portfolio-hover">
+                      <div class="portfolio-hover-content">
+                          <i class="fa fa-plus fa-3x"></i>
+                      </div>
+                  </div>
+                  <img src="images/portfolio/mdcom.jpg" class="img-responsive" alt="">
+              </a>
+              <div class="portfolio-caption">
+                  <h4>mario-duran.com</h4>
+                  <p class="text-muted">SPA website<br>Angular 1.5</p>
+              </div>
+          </div>
+            <div class="col-md-3 col-sm-6 portfolio-item">
                 <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal" target="_self">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
@@ -22,7 +36,7 @@
                     <p class="text-muted">Single Page Application <br>Angular JS</p>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 portfolio-item">
+            <div class="col-md-3 col-sm-6 portfolio-item">
                 <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal" target="_self">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
@@ -36,7 +50,7 @@
                     <p class="text-muted">Video Game <br> Unity3D</p>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 portfolio-item">
+            <div class="col-md-3 col-sm-6 portfolio-item">
                 <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal" target="_self">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
@@ -132,6 +146,34 @@
                         <p class="text-justify">The Crack my Screen App is a fun way to trick your friends into thinking you cracked your iPhone screen.<br />Simply, open the App and select a background picture or select the default iPhone background and press the screen to 'Crack' the screen.<br />If you have an iPhone 6s / 6s Plus with 3D touch enabled more elaborate and scientific screen cracking will be available.</p>
                         <p class="text-warning">Sadly this app didn'e made it to the app store because it wasn't compliant with the Apple's xyz policies.</p>
                         <p>You can view and download the source code at my <a href="https://bitbucket.org/mario-duran/crack-my-screen" target="_blank">BitBucket</a> page.</p>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Portfolio Modal 4 -->
+<div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <!-- Project Details Go Here -->
+                        <h2>mario-duran.com</h2>
+                        <p class="item-intro text-muted">Angular JS (1.5)</p>
+                        <img class="img-responsive img-centered" src="images/portfolio/mdcom-plus.jpg" alt="Crack my Screen">
+                        <p class="text-justify">I created this website with the idea in mind to expose my Ideas and Projects. It is being developed in Javascript using Angular JS as the main framework. For the scaffolding I used <a href="http://yeoman.io/" target="_blank">Yeoman</a> and their famous Angular Generator and I use grunt to 'compile' and run repetitive tasks over it.</p>
+                        <p>You can take a look or download the source code at my <a href="https://github.com/mario-duran/mario-duran.com" target="_blank">Github</a> page.</p>
                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
                     </div>
                 </div>
