Edit the text inside the mario-duran.com project detail

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -172,8 +172,8 @@
                         <h2>mario-duran.com</h2>
                         <p class="item-intro text-muted">Angular JS (1.5)</p>
                         <img class="img-responsive img-centered" src="images/portfolio/mdcom-plus.jpg" alt="Crack my Screen">
-                        <p class="text-justify">I created this website with the idea in mind to expose my Ideas and Projects. It is being developed in Javascript using Angular JS as the main framework. For the scaffolding I used <a href="http://yeoman.io/" target="_blank">Yeoman</a> and their famous Angular Generator and I use grunt to 'compile' and run repetitive tasks over it.</p>
-                        <p>You can take a look or download the source code at my <a href="https://github.com/mario-duran/mario-duran.com" target="_blank">Github</a> page.</p>
+                        <p class="text-justify">I created this website with the idea in mind to expose my Ideas and Projects. It is being developed in Javascript/HTML using AngularJS as the main javascript framework. For the scaffolding of the SPA I used <a href="http://yeoman.io/" target="_blank">Yeoman</a> and their famous Angular Generator, and I keep using Grunt to 'compile' and run repetitive tasks over it.</p><p class="text-justify">For the visual part I'm using Twitter Bootstrap and a template called 'Agency' from the people of <a href="http://startbootstrap.com" target="_new">startbootstrap.com</a>. I just made a few modifications to make it fit inside the structure of the Angular generator</p>
+                        <p class="text-justify">You can take a look or download the source code at my <a href="https://github.com/mario-duran/mario-duran.com" target="_blank">Github</a> page.</p>
                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
                     </div>
                 </div>
