Updated the links to the weatherApp

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -89,9 +89,8 @@
                         <p class="item-intro text-muted">AngularJS Single Page Application</p>
                         <img class="img-responsive img-centered" src="images/portfolio/weatherApp.png" alt="">
                         <p>Just another weather app. It is a small project I made to learn and play around with AngularJS 1.5. Uses the weather API provided by OpenWeatherMap.org.</p>
-                        <p><h5>Test it here</h5></p>
-                        <div>SOME APP RUNNING HERE</div>
-                      <p>You can view the App source code at <a href="https://bitbucket.org/mario-duran/" target="_blank">BitBucket</a>.</p>
+                        <p><h5><a href="projects/weatherApp" target="_new">Test it here</a></h5></p>
+                      <p>You can view the App source code at <a href="https://github.com/mario-duran/weatherApp" target="_blank">Github</a>.</p>
                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                     </div>
                 </div>
@@ -144,8 +143,8 @@
                         <p class="item-intro text-muted">iOS app</p>
                         <img class="img-responsive img-centered" src="images/portfolio/Promo1x640.png" alt="Crack my Screen">
                         <p class="text-justify">The Crack my Screen App is a fun way to trick your friends into thinking you cracked your iPhone screen.<br />Simply, open the App and select a background picture or select the default iPhone background and press the screen to 'Crack' the screen.<br />If you have an iPhone 6s / 6s Plus with 3D touch enabled more elaborate and scientific screen cracking will be available.</p>
-                        <p class="text-warning">Sadly this app didn'e made it to the app store because it wasn't compliant with the Apple's xyz policies.</p>
-                        <p>You can view and download the source code at my <a href="https://bitbucket.org/mario-duran/crack-my-screen" target="_blank">BitBucket</a> page.</p>
+                        <p class="text-warning text-justify">Sadly this app didn't made it to the app store because it wasn't compliant with the Apple's XYZ whatever policies.</p>
+                        <p class="text-justify">You can view and download the source code at my <a href="https://bitbucket.org/mario-duran/crack-my-screen" target="_blank">BitBucket</a> page.</p>
                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
                     </div>
                 </div>
@@ -172,7 +171,7 @@
                         <h2>mario-duran.com</h2>
                         <p class="item-intro text-muted">Angular JS (1.5)</p>
                         <img class="img-responsive img-centered" src="images/portfolio/mdcom-plus.jpg" alt="Crack my Screen">
-                        <p class="text-justify">I created this website with the idea in mind to expose my Ideas and Projects. It is being developed in Javascript/HTML using AngularJS as the main javascript framework. For the scaffolding of the SPA I used <a href="http://yeoman.io/" target="_blank">Yeoman</a> and their famous Angular Generator, and I keep using Grunt to 'compile' and run repetitive tasks over it.</p><p class="text-justify">For the visual part I'm using Twitter Bootstrap and a template called 'Agency' from the people of <a href="http://startbootstrap.com" target="_new">startbootstrap.com</a>. I just made a few modifications to make it fit inside the structure of the Angular generator</p>
+                        <p class="text-justify">I created this website with the idea in mind to expose my Ideas and Projects. It is being developed in Javascript/HTML using AngularJS as the main javascript framework. For the scaffolding of the SPA I used <a href="http://yeoman.io/" target="_blank">Yeoman</a> and their famous Angular Generator, and I keep using Grunt to 'compile' and run repetitive tasks over it.</p><p class="text-justify">For the visual part I'm using Twitter Bootstrap and a template called 'Agency' from the people of <a href="http://startbootstrap.com" target="_new">startbootstrap.com</a>. I just made a few modifications to make it fit inside the structure of the Angular generator.</p>
                         <p class="text-justify">You can take a look or download the source code at my <a href="https://github.com/mario-duran/mario-duran.com" target="_blank">Github</a> page.</p>
                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
                     </div>
