Updated menu added blog

--- a/app/views/navigationBar.html
+++ b/app/views/navigationBar.html
@@ -26,6 +26,9 @@
                 <li ng-class="{'active': loc=='about'}">
                     <a class="page-scroll" href="#about">About Me</a>
                 </li>
+                <li ng-class="{'active': loc=='blog'}">
+                    <a class="page-scroll" href="http://blog.mario-duran.com" target="_blank">Blog</a>
+                </li>
                 <li ng-class="{'active': loc=='contact'}">
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
