Updated job experience

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
-                      <li class="timeline-inverted">
+                      <li>
                           <div class="timeline-image" ng-click="gotoURL('http://orinoco-systems.com')" style="cursor:pointer;">
                               <img class="img-circle img-responsive" src="images/about/orinoco.png" alt="">
                           </div>
@@ -45,15 +45,29 @@
                               </div>
                           </div>
                       </li>
+                      <li class="timeline-inverted">
+                          <div class="timeline-image" ng-click="gotoURL('https://www.northerntrust.com')" style="cursor:pointer;">
+                              <img class="img-circle img-responsive" src="images/about/nt.png" alt="">
+                          </div>
+                          <div class="timeline-panel">
+                              <div class="timeline-heading">
+                                  <h4>Sept 2016 - Present</h4>
+                                  <h4 class="subheading">Northern Trust</h4>
+                                    <span class="text-muted">(Current Client)</span>
+                              </div>
+                              <div class="timeline-body">
+                                  <p class="text-muted">Intranet development hosted in Sharepoint (Partner Passport). Sharepoint support and workflow design and implementation.</p>
+                              </div>
+                          </div>
+                      </li>
                         <li>
                             <div class="timeline-image" ng-click="gotoURL('http://eki-digital.com')" style="cursor:pointer;">
                                 <img class="img-circle img-responsive" src="images/about/eki.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Mar 2016-Present</h4>
+                                    <h4>Mar 2016- Sept 2016</h4>
                                     <h4 class="subheading">EKI-Digital</h4>
-                                    <span class="text-muted">(Current Client)</span>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Senior Consultant. Currently supporting the development and implementation of an Enterprise Case Management System for the City of Chicago.</p>
