--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -9,6 +9,20 @@
         </div>
         <div class="row">
           <div class="col-md-3 col-sm-6 portfolio-item">
+              <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal" target="_self">
+                  <div class="portfolio-hover">
+                      <div class="portfolio-hover-content">
+                          <i class="fa fa-plus fa-3x"></i>
+                      </div>
+                  </div>
+                  <img src="images/portfolio/spimage.jpg" class="img-responsive" alt="">
+              </a>
+              <div class="portfolio-caption">
+                  <h4>SP Image Picker</h4>
+                  <p class="text-muted">CKEditor Plugin<br>Javascript</p>
+              </div>
+          </div>
+          <div class="col-md-3 col-sm-6 portfolio-item">
               <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal" target="_self">
                   <div class="portfolio-hover">
                       <div class="portfolio-hover-content">
@@ -19,7 +33,8 @@
               </a>
               <div class="portfolio-caption">
                   <h4>mario-duran.com</h4>
-                  <p class="text-muted">SPA website<br>Angular 1.5</p>
+                  <p class="text-muted">SPA website<br>Angular JS</p>
+
               </div>
           </div>
             <div class="col-md-3 col-sm-6 portfolio-item">
@@ -50,6 +65,8 @@
                     <p class="text-muted">Video Game <br> Unity3D</p>
                 </div>
             </div>
+          </div>
+          <div class="row">
             <div class="col-md-3 col-sm-6 portfolio-item">
                 <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal" target="_self">
                     <div class="portfolio-hover">
@@ -170,9 +187,38 @@
                         <!-- Project Details Go Here -->
                         <h2>mario-duran.com</h2>
                         <p class="item-intro text-muted">Angular JS (1.5)</p>
-                        <img class="img-responsive img-centered" src="images/portfolio/mdcom-plus.jpg" alt="Crack my Screen">
+                        <img class="img-responsive img-centered" src="images/portfolio/mdcom-plus.jpg" alt="mario-duran.com">
                         <p class="text-justify">I created this website with the idea in mind to expose my Ideas and Projects. It is being developed in Javascript/HTML using AngularJS as the main javascript framework. For the scaffolding of the SPA I used <a href="http://yeoman.io/" target="_blank">Yeoman</a> and their famous Angular Generator, and I keep using Grunt to 'compile' and run repetitive tasks over it.</p><p class="text-justify">For the visual part I'm using Twitter Bootstrap and a template called 'Agency' from the people of <a href="http://startbootstrap.com" target="_new">startbootstrap.com</a>. I just made a few modifications to make it fit inside the structure of the Angular generator.</p>
                         <p class="text-justify">You can take a look or download the source code at my <a href="https://github.com/mario-duran/mario-duran.com" target="_blank">Github</a> page.</p>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Portfolio Modal 5-->
+<div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+                <div class="rl">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <div class="modal-body">
+                        <!-- Project Details Go Here -->
+                        <h2>SharePoint Image Picker</h2>
+                        <p class="item-intro text-muted">CKEditor, Javascript, SharePoint</p>
+                        <img class="img-responsive img-centered" src="images/portfolio/SPImage.jpg" alt="SharePoint Image Picker">
+                        <p class="text-justify">I had a requirement from a client to add images from a SharePoint Library (Sharepoint Asset Picker) into a rich text editor they use for a news intake form hosted in SharePoint 2013. The rich text editor they were using was CKEditor 4.6 and they wanted to integrate the built in SharePoint asset picker into it. It was developed in Javascript and integrated with SharePoint 2013 client object model.</p>
+                        <p class="text-justify">Check the <a href="http://ckeditor.com/addon/SPImage" target="_blank">CKEditor</a> adds-on page.<br>
+                        Check the <a href="https://blog.mario-duran.com/2017/01/28/ckeditor-plugging-to-add-images-from-sharepoint-asset-picker/" target="_blank">Documentation</a> adds-on page.<br>
+                        You can take a look or download the source code at my <a href="https://github.com/mario-duran/SPimage" target="_blank">Github</a> page.</p>
                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
                     </div>
                 </div>
